# clint-lib

./: Cargo.toml  README.md
src/: docdb.rs  lib.rs  utils.rs
src/openai/: chat.rs  embed.rs  mod.rs
src/prompt/: cite.rs  mod.rs  notes.rs  respond.rs  rewrite.rs  utils.rs
src/prompt/diagnosis/: initial.rs  mod.rs  refine.rs  utils.rs
