[package]
name = "clint-lib"
version = "0.1.0"
authors = ["Garrin McGoldrick <garrin.mcgoldrick@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen-futures = "0.4.37"
thiserror = "1.0.43"
tap = "1.0.1"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
reqwest = { version = "0.11.18", features = ["json", "stream"] }
serde-wasm-bindgen = "0.5.0"
sha2 = "0.10.7"
rmp-serde = "1.1.1"
futures = "0.3.28"
bytes = "1.4.0"
async-sse = "5.1.0"
ndarray = "0.15.6"
ndarray-npy = "0.8.1"
noisy_float = "0.2.0"
hex = "0.4.3"
itertools = "0.11.0"
tinytemplate = "1.2.1"
schemars = { version = "0.8.12", features = ["preserve_order"] }
wasm-bindgen-test = "0.3.34"
js-sys = "0.3.64"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
