[package]
name = "clint-lib"
version = "0.1.0"
authors = ["Garrin McGoldrick <garrin.mcgoldrick@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen-futures = "0.4.43"
thiserror = "1.0.63"
tap = "1.0.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
reqwest = { version = "0.12.7", features = ["json", "stream"] }
serde-wasm-bindgen = "0.6.5"
sha2 = "0.10.8"
rmp-serde = "1.3.0"
futures = "0.3.30"
bytes = "1.7.1"
async-sse = "5.1.0"
ndarray = "0.15.6"
ndarray-npy = "0.8.1"
noisy_float = "0.2.0"
hex = "0.4.3"
itertools = "0.13.0"
tinytemplate = "1.2.1"
schemars = { version = "0.8.21", features = ["preserve_order"] }
wasm-bindgen-test = "0.3.43"
js-sys = "0.3.64"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
